k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swagger-ui
spec:
  selector:
    app: swagger-ui
  ports:
    - port: 80
      targetPort: 80
