k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: swagger-ui
spec:
  hosts:
    - "*"
  gateways:
    - taste-food
  http:
    - match:
        - uri:
            exact: /docs
        - uri:
            exact: /docs/
        - uri:
            prefix: /docs/
      rewrite:
        uri: /docs/
      route:
        - destination:
            host: swagger-ui.default.svc.cluster.local
            port:
              number: 80
